--- a/Back-end/.env
+++ b/Back-end/.env
@@ -1,1 +1,2 @@
-DATABASE_URL="mongodb://localhost/argentBankDB"
+# DATABASE_URL="mongodb://localhost:27017/argentBankDB"
+DATABASE_URL="mongodb://root:rootroot@localhost:27017/argentBankDB?authSource=argentBankDB"
