--- a/Back-end/.env
+++ b/Back-end/.env
@@ -1,2 +1,2 @@
-# DATABASE_URL="mongodb://localhost:27017/argentBankDB"
 DATABASE_URL="mongodb://root:rootroot@localhost:27017/argentBankDB?authSource=argentBankDB"
+SECRET_KEY="1234567890"
